# antplus_examples

./: Dockerfile  Makefile  README.md  install.sh  pyproject.toml  start.sh
app/: ant.py  api.py  cli.py  core.py  main.py  model.py
backup/: dashboard_old.html
frontend/: .env.production  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  config.js  style.css
frontend/src/components/: Alert.vue  ConnectedDevices.vue  ControlCard.vue  LiveMetrics.vue  MetricRow.vue  SettingsCard.vue  WorkoutCard.vue
frontend/src/composables/: singletonStreams.js  useStreams.js
frontend/src/constants/: toastType.js
metrics-ui/: index.html  package-lock.json  package.json  vite.config.js
metrics-ui/src/: App.vue  config.js
metrics-ui/src/components/: Alert.vue  MetricRow.vue
scripts/: amwa.service  install.sh  nginx.conf  start.sh
static/: dashboard.html
templates/: dashboard.html  nginx.conf.template
