[project]
name = "antplus-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "jinja2>=3.1.6",
    "openant>=1.3.4",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
